feat(i18n): 添加是/否国际化支持并优化代码格式
- 在前端国际化消息中添加YES和NO常量
- 更新数据库浏览页面中的可空列显示，使用国际化翻译
- 优化SELECT_TABLE_HINT字符串格式化
- 调整驼峰命名转换逻辑中的引号格式
- 移除schemas.py中未使用的ConfigDict导入

--- a/pytuck_view/static/index.html
+++ b/pytuck_view/static/index.html
@@ -362,7 +362,7 @@
                                             </td>
                                             <td class="col-type-cell">{{ col.type }}</td>
                                             <td class="col-nullable-cell">
-                                                {{ col.nullable !== false ? '是' : '否' }}
+                                                {{ col.nullable !== false ? t('common.yes') : t('common.no') }}
                                             </td>
                                             <td class="col-pk-cell">
                                                 <span v-if="col.primary_key" class="pk-badge">🔑</span>
