feat(editor): 添加多行文本编辑器和错误消息复制功能
- 为字符串和文本类型的字段添加 textarea 编辑器支持
- 实现错误消息的复制到剪贴板功能，包括现代和传统浏览器兼容性
- 扩展 toast 提示框宽度以更好地显示内容
- 在 toast 中添加滚动条防止长消息溢出
- 添加复制按钮和关闭按钮的样式优化
- 为 toast 添加操作按钮区域和图标支持

--- a/pytuck_view/static/index.html
+++ b/pytuck_view/static/index.html
@@ -378,7 +378,15 @@
                                                             {{ state.tableData[state.selectedRowIndex][col.name] }}
                                                         </template>
                                                         <template v-else>
+                                                            <textarea
+                                                                v-if="col.type && (col.type.toLowerCase().includes('str') || col.type.toLowerCase().includes('text') || col.type.toLowerCase().includes('varchar') || col.type.toLowerCase().includes('char'))"
+                                                                v-model="state.editBuffer[col.name]"
+                                                                class="edit-input edit-textarea"
+                                                                :disabled="col.primary_key"
+                                                                rows="3"
+                                                            ></textarea>
                                                             <input
+                                                                v-else
                                                                 v-model="state.editBuffer[col.name]"
                                                                 class="edit-input"
                                                                 :disabled="col.primary_key"
@@ -558,7 +566,14 @@
         <!-- Toast 消息提示框 -->
         <div v-if="state.error" class="toast toast-error">
             <div class="toast-content">{{ state.error }}</div>
-            <button class="toast-close" @click="state.error = null">×</button>
+            <div class="toast-actions">
+                <button class="toast-btn" @click="state.error = null" :title="t('common.close')">❌</button>
+                <button class="toast-btn" @click="copyErrorMessage" :title="t('common.copy')">
+                    <svg viewBox="0 0 24 24" width="16" height="16" fill="currentColor">
+                        <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
+                    </svg>
+                </button>
+            </div>
         </div>
 
         <!-- 全局加载状态 -->
