feat(table): 添加表格删除功能并优化表格管理界面
- 在表格编辑弹窗中添加删除按钮，允许用户删除选中的表格
- 实现 deleteTable 函数处理表格删除逻辑和确认提示
- 优化模态框底部布局，将操作按钮分为左右两部分对齐
- 添加 modal-footer-right CSS 类用于右侧按钮组样式
- 修改表格加载逻辑，按表名进行字母排序显示
- 删除表格后自动刷新表格列表并清理相关状态数据

--- a/pytuck_view/static/index.html
+++ b/pytuck_view/static/index.html
@@ -557,8 +557,11 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn" @click="closeTableEditModal">{{ t('common.cancel') }}</button>
-                    <button class="btn btn-primary" @click="saveTableEdit">{{ t('dataEdit.save') }}</button>
+                    <button class="btn btn-danger" @click="deleteTable">🗑️ {{ t('dataEdit.deleteTable') }}</button>
+                    <div class="modal-footer-right">
+                        <button class="btn" @click="closeTableEditModal">{{ t('common.cancel') }}</button>
+                        <button class="btn btn-primary" @click="saveTableEdit">{{ t('dataEdit.save') }}</button>
+                    </div>
                 </div>
             </div>
         </div>
